# test_akber-soft

./: .gitignore  CMakeLists.txt  README.md  command
lib/: file_work.h  hash_item.h  read_string.h
src/: fileWork.c  hashItem.c  readString.c  saveStringAsHash.c
